[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "orbax-checkpoint"
description = "Orbax Checkpoint"
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [{name = 'Orbax Authors', email='orbax-dev@google.com'}]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]


keywords = ["JAX machine learning", "checkpoint", "training"]

dependencies = [
    'absl-py',
    'etils[epath,epy]',
    'typing_extensions',
    'msgpack',
    'jax >= 0.4.26',
    'jaxlib',
    'numpy',
    'pyyaml',
    'tensorstore >= 0.1.60',
    'nest_asyncio',
    'protobuf',
    'humanize',
]

dynamic = ['version']

[tool.flit.module]
name = "orbax.checkpoint"

[project.urls]
homepage = 'http://github.com/google/orbax'
repository = 'http://github.com/google/orbax'

[project.optional-dependencies]
testing = [
    'google-cloud-logging',
    'mock',
    'flax',
    'pytest',
    'pytest-xdist'
]
