[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "orbax-export"
description = "Orbax Export"
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.10'
authors = [{name = 'Orbax Authors', email='orbax-dev@google.com'}]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

keywords = ["JAX machine learning", "serialization", "export"]

dependencies = [
    'absl-py',
    'dataclasses-json',
    'etils',
    'jax >= 0.4.34',
    'jaxlib',
    'jaxtyping',
    'numpy',
    'protobuf',
    "orbax-checkpoint >=0.9.0"
]

dynamic = ['version']

[tool.flit.module]
name = "orbax.export"

[tool.flit.sdist]
exclude = [
    '**/BUILD',
]

[project.urls]
homepage = 'http://github.com/google/orbax'
repository = 'http://github.com/google/orbax'

[project.optional-dependencies]
testing = [
    'pytest',
    'pytest-xdist',
    'tf-nightly',
    'requests',
    'chex',
]
