[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orbax-checkpoint"
version = "0.1.1"
description = "Orbax Checkpoint"
readme = "README.md"
license = "Apache-2.0"
authors = ["Orbax Authors <orbax-dev@google.com>"]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = ["JAX machine learning", "checkpoint", "training"]
homepage = "http://github.com/google/orbax"
repository = "http://github.com/google/orbax"
packages = [
    { include = "../checkpoint" },
]

[tool.poetry.dependencies]
# TODO(b/268217293): Keep only dependencies unique to orbax checkpoint.
python = "^3.8"
absl-py = "*"
cached_property = "*"
importlib_resources = "*"
etils = "*"
flax = "*"
jax = "*"
jaxlib = "*"
numpy = "*"
pyyaml = "*"
tensorstore = ">=0.1.20"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-xdist = "*"